[gd_scene format=3 uid="uid://crd5p4i6mdrot"]

[ext_resource type="Script" uid="uid://buqoqc56mkevx" path="res://scenes/level/level.gd" id="1_qkmgm"]
[ext_resource type="PackedScene" uid="uid://d4ksgenm87x7y" path="res://scenes/urinal/urinal.tscn" id="2_nbgty"]
[ext_resource type="PackedScene" uid="uid://cbbyts6c0gnmp" path="res://scenes/player/player.tscn" id="3_i166f"]
[ext_resource type="PackedScene" uid="uid://boy8ljlgdseeg" path="res://hud/hud.tscn" id="5_hnne4"]
[ext_resource type="PackedScene" uid="uid://jo0vwkms3tyr" path="res://scenes/tile_map.tscn" id="8_xv074"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv074"]
size = Vector2(512, 32)

[node name="Level" type="Node" unique_id=242161568]
process_mode = 3
script = ExtResource("1_qkmgm")
player_scene = ExtResource("3_i166f")

[node name="TimeLeft" type="Timer" parent="." unique_id=1398635452]
autostart = true

[node name="HUD" parent="." unique_id=1493484659 instance=ExtResource("5_hnne4")]

[node name="PlayerSpawnPosition" type="Marker2D" parent="." unique_id=1821633066]
position = Vector2(256, 472)

[node name="TileMap" parent="." unique_id=1031824972 instance=ExtResource("8_xv074")]

[node name="OOB" type="Area2D" parent="." unique_id=402485165]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB" unique_id=647078549]
position = Vector2(256, 496)
shape = SubResource("RectangleShape2D_xv074")

[node name="Game" type="Node2D" parent="." unique_id=285020677]
y_sort_enabled = true

[node name="Urinals" type="Node2D" parent="Game" unique_id=789048526]

[node name="Urinal" parent="Game/Urinals" unique_id=1549746867 instance=ExtResource("2_nbgty")]
position = Vector2(64, 64)

[node name="Urinal2" parent="Game/Urinals" unique_id=2140215031 instance=ExtResource("2_nbgty")]
position = Vector2(192, 64)

[node name="Urinal3" parent="Game/Urinals" unique_id=265071806 instance=ExtResource("2_nbgty")]
position = Vector2(320, 64)

[node name="Urinal4" parent="Game/Urinals" unique_id=1975978995 instance=ExtResource("2_nbgty")]
position = Vector2(448, 64)

[node name="PhoneZombies" type="Node2D" parent="Game" unique_id=23687725]
y_sort_enabled = true
position = Vector2(0, -32)

[node name="Bikers" type="Node2D" parent="Game" unique_id=1371185795]
y_sort_enabled = true
position = Vector2(0, -32)

[node name="Vehicles" type="Node2D" parent="Game" unique_id=603596156]
y_sort_enabled = true
position = Vector2(0, -32)

[connection signal="timeout" from="TimeLeft" to="." method="_on_time_left_timeout"]
